// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms|list items/li-item card-product 1`] = `
<section
  class="story"
>
  <li
    class="list__item"
  >
    <article
      class="card-product"
      type="CardProduct"
    >
      <a
        aria-label="Ultimaker Nylon"
        class="anchor-overlay hit-area"
        href="https://ultimaker.com/en/products/materials/nylon"
        title="Ultimaker Nylon"
      />
       
      <div
        class="card-product__image-container"
      >
        <img
          alt="Nylon 3D printed gears"
          class="img--contain card-product__image img--loading"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          srcset="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7 1w"
          type="Image"
        />
         
        <!---->
      </div>
       
      <h3
        class="card-product__heading"
      >
        Ultimaker Nylon
      </h3>
       
      <ul
        class="list card-product__labels-list"
      >
        <li
          class="list__item list__item--inline"
          type="LiInline"
        >
          <span
            class="label"
          >
            Abrasion-resistant
          </span>
        </li>
        <li
          class="list__item list__item--inline"
          type="LiInline"
        >
          <span
            class="label"
          >
            Durable
          </span>
        </li>
        <li
          class="list__item list__item--inline"
          type="LiInline"
        >
          <span
            class="label"
          >
            High strength-to-weight ratio
          </span>
        </li>
        <li
          class="list__item list__item--inline"
          type="LiInline"
        >
          <span
            class="label"
          >
            Low friction coefficient
          </span>
        </li>
      </ul>
    </article>
  </li>
   
  <div
    class="vue-portal-target"
  />
</section>
`;

exports[`Storyshots Atoms|list items/li-item span-label 1`] = `
<section
  class="story"
>
  <li
    class="list__item"
  >
    <span
      class="label"
    >
      High strength-to-weight ratio
    </span>
  </li>
   
  <div
    class="vue-portal-target"
  />
</section>
`;

exports[`Storyshots Atoms|list items/li-item text 1`] = `
<section
  class="story"
>
  <li
    class="list__item"
  >
    High strength-to-weight ratio
  </li>
   
  <div
    class="vue-portal-target"
  />
</section>
`;
